feat : open api 문서화
- 일단은 이후 구현이 더 중요하므로 문서화 단계는 추구 고도화 진행
